image adding function added / persisting to db missing